src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Aggiornato_da_bonifica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggiornato da bonifica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cap_Formula__c</fullName>
        <formula>IF((ISBLANK(BillingCountry ) || ISNULL(BillingCountry )), &apos;&apos;,  IF(BillingCountry != &apos;Italy&apos;, &apos;00000&apos;,BillingPostalCode ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cap Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_SDI__c</fullName>
        <label>Codice SDI</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_name__c</fullName>
        <label>Ragione sociale</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Since__c</fullName>
        <label>Customer Since</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Inizio_Dichiarazione_di_Intenti__c</fullName>
        <label>Data Inizio Dichiarazione di Intenti</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_intent_number__c</fullName>
        <inlineHelpText>Numero dichiarazione di intenti da dover inserire manualmente.</inlineHelpText>
        <label>Numero dichiarazione di intenti</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declaration_of_intent__c</fullName>
        <inlineHelpText>Data della dichiarazione di intenti da dover inserire manualmente alla creazione dell&apos;account. Ricordarsi di modificarla quando è stato raggiunto il limite.</inlineHelpText>
        <label>Dichiarazione di intenti valida fino al</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fa_Parte_dell_Unione_Europea__c</fullName>
        <formula>IF( BillingCountry = &apos;Italy&apos; || BillingCountry = &apos;Italia&apos; || BillingCountry = &apos;Belgium&apos; ||  BillingCountry = &apos;Bulgaria&apos; || BillingCountry = &apos;Czech Republic&apos; || BillingCountry = &apos;Denmark&apos; || BillingCountry = &apos;Germany&apos; || BillingCountry = &apos;Estonia&apos; || BillingCountry = &apos;Ireland&apos; || BillingCountry = &apos;Greece&apos; || BillingCountry = &apos;Spain&apos; || BillingCountry = &apos;France&apos; || BillingCountry = &apos;Croatia&apos; || BillingCountry = &apos;Cyprus&apos; || BillingCountry = &apos;Latvia&apos; || BillingCountry = &apos;Lithuania&apos; || BillingCountry = &apos;Luxembourg&apos; || BillingCountry = &apos;Hungary&apos; || BillingCountry = &apos;Netherlands&apos; || BillingCountry = &apos;Austria&apos; || BillingCountry = &apos;Poland&apos; || BillingCountry = &apos;Portugal&apos; || BillingCountry = &apos;Romania&apos; || BillingCountry = &apos;Slovenia&apos; || BillingCountry = &apos;Slovakia&apos; || BillingCountry = &apos;Finland&apos; || BillingCountry = &apos;Sweden&apos;, &apos;SI&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fa Parte dell&apos;Unione Europea</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_code__c</fullName>
        <label>Codice Fiscale</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Artmatica__c</fullName>
        <externalId>true</externalId>
        <label>Id Artmatica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEC__c</fullName>
        <label>PEC</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>P_Iva_C_F__c</fullName>
        <label>P.Iva/C.F.</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <inlineHelpText>Termini di pagamento applicati all&apos;account.</inlineHelpText>
        <label>Termini di pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>000DFFM</fullName>
                    <label>DATA FATTURA FINE MESE​</label>
                </value>
                <value>
                    <fullName>000DINR</fullName>
                    <label>DATE INVOICE RECEIPT​</label>
                </value>
                <value>
                    <fullName>15 GG DATA FATTURA</fullName>
                </value>
                <value>
                    <fullName>15 DAYS INVOICE DATE​</fullName>
                </value>
                <value>
                    <fullName>030DF-IT</fullName>
                    <label>30 GG DATA FATTURA ​</label>
                </value>
                <value>
                    <fullName>030DF-EN</fullName>
                    <label>30 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>030DFFM</fullName>
                    <label>30 GG DATA FATTURA FINE MESE</label>
                </value>
                <value>
                    <fullName>030FM-EN</fullName>
                    <label>30 DAYS END OF MONTH​</label>
                </value>
                <value>
                    <fullName>045DF</fullName>
                    <label>45 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>045DF-EN</fullName>
                    <label>45 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>045FDDF</fullName>
                    <label>45 GG DATA FATTURA FINE MESE</label>
                </value>
                <value>
                    <fullName>045FDDF-EN</fullName>
                    <label>45 DAYS INVOICE DATE END OF MONTH</label>
                </value>
                <value>
                    <fullName>060DF</fullName>
                    <label>60 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>060DF-EN</fullName>
                    <label>60 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>060DFFM</fullName>
                    <label>60 GG DATA FATTURA FINE MESE​</label>
                </value>
                <value>
                    <fullName>060DFFM-EN</fullName>
                    <label>60 DAYS INVOICE DATE END OF MONTH​</label>
                </value>
                <value>
                    <fullName>075</fullName>
                    <label>75 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>075-EN</fullName>
                    <label>75 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>090df</fullName>
                    <label>90 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>090df-EN</fullName>
                    <label>90 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>090DFFM</fullName>
                    <label>90 GG DATA FATTURA FINE MESE​</label>
                </value>
                <value>
                    <fullName>090FM-EN</fullName>
                    <label>90 DAYS END OF MONTH​</label>
                </value>
                <value>
                    <fullName>120DFFM</fullName>
                    <label>120 GG DATA FATTURA FINE MESE</label>
                </value>
                <value>
                    <fullName>120DFFM-EN</fullName>
                    <label>120 DAYS INVOICE DATE END OF MONTH</label>
                </value>
                <value>
                    <fullName>270DFFM</fullName>
                    <label>270 GG DATA FATTURA​</label>
                </value>
                <value>
                    <fullName>270DFFM-EN</fullName>
                    <label>270 DAYS INVOICE DATE​</label>
                </value>
                <value>
                    <fullName>COMP</fullName>
                    <label>In compensazione con fattura stornata​</label>
                </value>
                <value>
                    <fullName>COMPENG</fullName>
                    <label>To be compensated with reversed invoice ​</label>
                </value>
                <value>
                    <fullName>105DF</fullName>
                    <label>105 GG DATA FATTURA</label>
                </value>
                <value>
                    <fullName>0 DF</fullName>
                    <isActive>false</isActive>
                    <label>0 DF</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <inlineHelpText>Large &gt; 1B - Medium &gt; 50M -  Small &lt;= 50M</inlineHelpText>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Code__c</fullName>
        <label>Codice Fornitore</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nord-Ovest</fullName>
                </value>
                <value>
                    <fullName>Nord-Est</fullName>
                </value>
                <value>
                    <fullName>Centro-Sud</fullName>
                </value>
                <value>
                    <fullName>Estero​</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Code__c</fullName>
        <label>Codice IVA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>22</fullName>
                    <label>Aliquota 22%</label>
                </value>
                <value>
                    <fullName>N060201</fullName>
                    <label>Aliquota 0% - Servizi art. 7ter – UE</label>
                </value>
                <value>
                    <fullName>N020202</fullName>
                    <label>Aliquota 0% - Servizi art.7ter – extraUE</label>
                </value>
                <value>
                    <fullName>0%</fullName>
                    <isActive>false</isActive>
                    <label>0%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_number__c</fullName>
        <label>Partita IVA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
            <value>Food &amp; Beverage</value>
        </filters>
        <label>Tutti gli account</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Account personali</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Parent_Account_and_Territory</fullName>
        <active>false</active>
        <description>Controlla che l&apos;Account non abbia una Società controllante per rendere obbligatoria la compilazione del campo Territorio</description>
        <errorConditionFormula>Parent.Id   =  &apos;&apos;

&amp;&amp;

ISPICKVAL(Territory__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Territory__c</errorDisplayField>
        <errorMessage>If the Parent Account field is empty, the Territory field must be filled in</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controllo_P_IVA</fullName>
        <active>true</active>
        <description>Controllo sulla presenza della P. IVA per Account non Italiani</description>
        <errorConditionFormula>ISPICKVAL( Territory__c , &apos;Estero&apos;) &amp;&amp;  VAT_number__c = &apos;&apos; &amp;&amp;  Fa_Parte_dell_Unione_Europea__c = &apos;SI&apos;</errorConditionFormula>
        <errorDisplayField>VAT_number__c</errorDisplayField>
        <errorMessage>La Partita Iva è Obbligatoria in caso di Account Esteri ed Europei</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Controllo_Territoy_e_Paese_Fatturazione</fullName>
        <active>false</active>
        <description>Controlla che il Paese di Fatturazione e Territory siano coerenti</description>
        <errorConditionFormula>NOT(ISPICKVAL( BillingCountryCode, &apos;&apos;))

&amp;&amp;


(AND(ISPICKVAL( BillingCountryCode, &apos;IT&apos;),  ISPICKVAL( Territory__c , &apos;Estero​&apos;))

||

AND(NOT(ISPICKVAL( BillingCountryCode, &apos;IT&apos;)),  NOT(ISPICKVAL( Territory__c , &apos;Estero​&apos;))))</errorConditionFormula>
        <errorDisplayField>Territory__c</errorDisplayField>
        <errorMessage>Se il Paese di Fatturazione è Italia non è possibile selezionare Estero. Se il Paese di Fatturazione non è Italia si può selezionare solo Estero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Presenza_Numero_Dichiarazione_Intenti</fullName>
        <active>true</active>
        <description>Se &quot;Dichiarazione di intenti valida fino al&quot; è compilato anche &quot;Numero Dichiarazione&quot; deve esserlo. Se  &quot;Numero Dichiarazione&quot; è compilato anche &quot;Dichiarazione di intenti valida fino al&quot; deve essere compilato</description>
        <errorConditionFormula>NOT(ISBLANK(Declaration_of_intent__c))

&amp;&amp;

ISBLANK( Declaration_intent_number__c )

||

(ISBLANK(Declaration_of_intent__c)

&amp;&amp;

NOT(ISBLANK( Declaration_intent_number__c )))</errorConditionFormula>
        <errorDisplayField>Declaration_of_intent__c</errorDisplayField>
        <errorMessage>Se &quot;Dichiarazione di intenti valida fino al&quot; è compilato anche &quot;Numero Dichiarazione&quot; deve esserlo. Se  &quot;Numero Dichiarazione&quot; è compilato anche &quot;Dichiarazione di intenti valida fino al&quot; deve essere compilato</errorMessage>
    </validationRules>
</CustomObject>